# gomoku-bots

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/gomoku-cli/: Cargo.toml
crates/gomoku-cli/src/: args.rs  client.rs  local_server.rs  main.rs  runtime.rs  ui_state.rs  web_server.rs
crates/gomoku-cli/src/web/: index.html
crates/gomoku-core/src/: board.rs  engine.rs  game.rs  lib.rs  protocol.rs  transposition_table.rs  zobrist.rs
crates/gomoku-core/src/strategy/: frontier.rs  mod.rs  pattern.rs  router.rs  search.rs  tactical.rs  tests.rs  vcf.rs  vct.rs
slides/: package-lock.json  package.json  slides.md
